[package]
name = "tomoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
dotenv = "0.15.0"
envy = "0.4.2"
oauth2 = "4.2.3"
serde = { version = "1.0.139", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde_with = { version = "1.14.0", features = ["chrono"] }
serde_json = { version = "1.0.82" }
clap = { version = "3.2.12", features = ["derive"] }
